--- a/style.css
+++ b/style.css
@@ -5,12 +5,54 @@
     box-sizing: border-box;
 }
 body{
-    background: #080535;
+    
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(4,158,251,1) 100%);
 }
+
+.popup{
+    width: 400%;
+    max-width: 600px;
+    background: linear-gradient(135deg, #e93939, #404ff5);
+    color: #080808;
+    margin: 100px auto 0;
+    border-style: solid;
+    border-radius: 5px;    
+    border-width: 3px;
+    border-color: rgb(255, 255, 255);
+    padding: 40px 35px;
+    text-align: center;
+    position: absolute;
+   height: 250px;
+  padding: 30px 30px 30px;
+    left:50%;
+    transform: translate(-50%,-50%);
+    box-shadow: 0 8px 8px rgba(0,0,0,0.2);
+
+
+}
+
+.popup h2{
+    font-size: 38px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.popup button{
+    width: 50%;
+    margin-top: 20px;
+    padding: 10px 0;
+    background: #6fd649;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 8px 8px rgba(0,0,0,0.2);
+}
+
 
 .Box{
     width: 100%;
-    max-width: 500px;
+    max-width: 520px;
     background: linear-gradient(135deg, #d74a0d, #240251);
     color: #080808;
     margin: 100px auto 0;
@@ -20,6 +62,13 @@ body{
     border-color: rgb(255, 255, 255);
     padding: 40px 35px;
     text-align: center;
+    box-shadow: 0 8px 8px rgba(0,0,0,0.2);
+
+}
+
+.title{
+    color: #0d7d00;
+    margin-bottom: 20px;
 }
 
 .Search{
@@ -79,7 +128,9 @@ body{
     justify-content: space-between;
     padding: 30 20px;
     margin-top: 50px;
-    color:#dacfff
+    color:#dacfff;
+
+  
 
 }
 
@@ -101,4 +152,42 @@ body{
 
 .weather{
     display: none;
+}
+
+
+
+
+
+.TempMin, .TempMax{
+    font-size: 30px;
+    margin-top: -10px;
+}
+
+.detailstemp{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10 20px;
+
+    margin-top: 50px;
+   
+    color:#dacfff
+
+}
+
+.detailsnew{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20 20px;
+
+    margin-top: 50px;
+   
+    color:#dacfff
+}
+
+.pressure, .visibility{
+    font-size: 30px;
+    margin-top: -10px;
+    margin-right: 10;
 }
