--- a/style.css
+++ b/style.css
@@ -5,49 +5,15 @@
     box-sizing: border-box;
 }
 body{
-    
+    overflow-x: hidden;
+
     background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(4,158,251,1) 100%);
 }
 
-.popup{
-    width: 400%;
-    max-width: 600px;
-    background: linear-gradient(135deg, #e93939, #404ff5);
-    color: #080808;
-    margin: 100px auto 0;
-    border-style: solid;
-    border-radius: 5px;    
-    border-width: 3px;
-    border-color: rgb(255, 255, 255);
-    padding: 40px 35px;
-    text-align: center;
-    position: absolute;
-   height: 250px;
-  padding: 30px 30px 30px;
-    left:50%;
-    transform: translate(-50%,-50%);
-    box-shadow: 0 8px 8px rgba(0,0,0,0.2);
 
 
-}
 
-.popup h2{
-    font-size: 38px;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
-
-.popup button{
-    width: 50%;
-    margin-top: 20px;
-    padding: 10px 0;
-    background: #6fd649;
-    color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    box-shadow: 0 8px 8px rgba(0,0,0,0.2);
-}
 
 
 .Box{
@@ -63,12 +29,14 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
     padding: 40px 35px;
     text-align: center;
     box-shadow: 0 8px 8px rgba(0,0,0,0.2);
-
+        
+          
 }
 
 .title{
     color: #0d7d00;
     margin-bottom: 20px;
+
 }
 
 .Search{
@@ -109,11 +77,23 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
      }
 
 .weather h1{
+   
+       
+    
     font-size: 50px;
-    font-weight: 400;
     color:#dacfff
 }
 
+.title h1{
+    
+    font-family: "Protest Guerrilla", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color:#dacfff;
+    font-size: 50px;
+
+
+}
 .weather h2{
     font-size: 30px;
     font-weight: 300;
@@ -134,20 +114,23 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
 
 }
 
-.col{
+.col {
     display: flex;
-    align-items: center;
+    align-items: center; 
     text-align: left;
+    margin-right: 20px; 
 }
 
-.col img{
-    width: 40px;
+.col img {
+    width: 50px;
     margin-right: 10px;
+    margin-top: -16px;
 }
 
 .humidity, .wind{
     font-size: 30px;
     margin-top: -10px;
+    margin-bottom: -10px;
 }
 
 .weather{
@@ -157,10 +140,11 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
 
 
 
-
 .TempMin, .TempMax{
     font-size: 30px;
     margin-top: -10px;
+    margin-bottom: -10px;
+
 }
 
 .detailstemp{
@@ -190,4 +174,16 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
     font-size: 30px;
     margin-top: -10px;
     margin-right: 10;
+    margin-bottom: -10px;
+
 }
+
+
+
+.modal-dialog {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: calc(100vh - 1rem); /* Adjust for the navbar height */
+}
+
